.metadata/.plugins/org.eclipse.cdt.ui/407vet6_monster_2209lib.build.log
15:11:50 **** Incremental Build of configuration Debug for project 407vet6_monster_2209lib ****
make -j12 all 
arm-none-eabi-g++ "../Drivers/TMC2209/tmc2209.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/ws-stm32/407vet6_monster_2209lib/Drivers/TMC2209" -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Drivers/TMC2209/tmc2209.d" -MT"Drivers/TMC2209/tmc2209.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Drivers/TMC2209/tmc2209.o"
arm-none-eabi-g++ "../Core/Src/main.cpp" -mcpu=cortex-m4 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/ws-stm32/407vet6_monster_2209lib/Drivers/TMC2209" -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Drivers/TMC2209/tmc2209.cpp:1:
../Drivers/TMC2209/tmc2209.h:220:3: error: 'HardwareSerial' does not name a type
  220 |   HardwareSerial * hardware_serial_ptr_;
      |   ^~~~~~~~~~~~~~
../Drivers/TMC2209/tmc2209.h:231:3: error: 'size_t' does not name a type
  231 |   size_t serialWrite(uint8_t c);
      |   ^~~~~~
../Drivers/TMC2209/tmc2209.h:8:1: note: 'size_t' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
    7 | #include <stdint.h> // uint32_t
  +++ |+#include <cstddef>
    8 | 
../Drivers/TMC2209/tmc2209.h:474:16: error: 'size_t' does not name a type
  474 |   const static size_t MICROSTEPS_PER_STEP_MIN = 1;
      |                ^~~~~~
../Drivers/TMC2209/tmc2209.h:474:16: note: 'size_t' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
../Drivers/TMC2209/tmc2209.h:475:16: error: 'size_t' does not name a type
  475 |   const static size_t MICROSTEPS_PER_STEP_MAX = 256;
      |                ^~~~~~
../Drivers/TMC2209/tmc2209.h:475:16: note: 'size_t' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
make: *** [Drivers/TMC2209/subdir.mk:19: Drivers/TMC2209/tmc2209.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from ../Core/Src/main.cpp:21:
D:/ws-stm32/407vet6_monster_2209lib/Drivers/TMC2209/tmc2209.h:220:3: error: 'HardwareSerial' does not name a type
  220 |   HardwareSerial * hardware_serial_ptr_;
      |   ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:11:50 Build Failed. 8 errors, 0 warnings. (took 783ms)

